# hugin-cli

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CREDITS  Dockerfile  Hugin.xml  LICENSE  MAINTAINERS  MAINTAINERS.md  Makefile  README  README.md  SECURITY.md  install.sh  main.c  main.cpp
.github/: FUNDING.yml
.github/workflows/: main-ci.yml  pr-ci.yml
.run/: Hugin.run.xml
account/: CMakeLists.txt  account.c  account.cpp  account.h  account_service.cpp  account_service.h  wallet.cpp  wallet.h
boards/: CMakeLists.txt  boards.c  boards.cpp  boards.h
cmake/: FindSqlcipher.cmake
common/: error_code.h
config/: ascii.h  cli_header.h  hugin_config.h  version.h
core/: core.h  log.c  log.h  node.cpp  node.h  setting.cpp  setting.h  window.c  window.h  window_chat.c  window_chat.cpp  window_chat.h  window_login.c  window_login.cpp  window_login.h  window_main.c  window_main.cpp  window_main.h  window_register.c  window_register.cpp  window_register.h
crypto/: CMakeLists.txt  crypto.c  crypto.cpp  crypto.h
daemon/: CMakeLists.txt  daemon.c  daemon.cpp  daemon.h
db/: CMakeLists.txt  database.c  database.cpp  database.h  node.c  node.cpp  node.h  post.c  post.cpp  post.h  post_encrypted.c  post_encrypted.h  post_encrypted_group.c  post_encrypted_group.h  sqlite3.cpp  sqlite3.h  transaction.c  transaction.cpp  transaction.h
docs/: CNAME  _config.yml  index.html
docs/css/: base.css  main.css
documentation/: index.rst
http/: http_request.c  http_request.h
resources/: HuginCLI.desktop  hugin-cli.desktop  logo.psd  readme.html
scripts/: README.md
service/: CMakeLists.txt  account_service.c  account_service.cpp  account_service.h  wallet_service.c  wallet_service.cpp  wallet_service.h
src/config/: cli_header.h
src/crypto/: CMakeLists.txt
test/: crypto_test.cpp  daemon_test.cpp
test/db/: database_test.c  database_test.cpp
util/: string_util.c  string_util.cpp  string_util.h
wallet/: CMakeLists.txt  wallet.c  wallet.cpp  wallet.h
